Reg Post Page (Controller-Marco): + fixed problem obtained at compileTime refeed to getLast() method by replacing with "array"-1 (another possible solution usage of LinkedList<> - toCheck) - ToCheck prevNextButton as well